maybe fixed the image cropping?

--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   opacity: 0;
   transition: opacity 1s ease;
 }
